# llm-zoomcamp-2026

./: .gitignore  homework.ipynb  ingest.py  nb_agents.ipynb  nb_one.ipynb  nb_persistent_rag.ipynb  nb_persistent_rag_ingest.ipynb  notebook.ipynb  pyproject.toml  rag_helper.py  rag_vector_helper.py
module 2 - vectors/: docker-compose.yml  homework_two.ipynb  vector_search.ipynb  vector_search_pgvector.ipynb
module 4 - evaluation/: homework_four_evaluation.ipynb
