[project]
name = "llm-zoomcamp-2026"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gitsource>=0.0.5",
    "google-genai>=2.8.0",
    "google-generativeai>=0.8.6",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlitesearch>=0.1.1",
]
